--- a/templates/_partials/_nav.html
+++ b/templates/_partials/_nav.html
@@ -2,7 +2,7 @@
   {% if request.session.access %}
     <ul class="nav app-nav py-1">
       <li class="nav-item">
-        <a class="nav-link {% if p == '/' %}active{% endif %}" href="home/">Home</a>
+        <a class="nav-link {% if p == '/home' %}active{% endif %}" href="/home/">Home</a>
       </li>
 
       <li class="nav-item">
